# robotapp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  build.py  conanfile.py  deploy.sh  graph.html  main.cpp  pipelines.steps.yml  pipelines.yml  readme.md  rpi
app/: CMakeLists.txt  main.cpp
app/src/: MiniPID.h  color_sensor.cpp  color_sensor.hpp  line_sensor.cpp  line_sensor.hpp  main.cpp  mini_pid.cpp  mini_pid.hpp  param_reader.cpp  param_reader.hpp  robot_car.cpp  robot_car.hpp  server.cpp  server.hpp  ws_client.cpp  ws_client.hpp
wrapper/: CMakeLists.txt
wrapper/src/: gopigo-wrapper.cpp  gopigo-wrapper.h
